--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 
 
 
-<script src="C:\Users\Chandu\Desktop\COUSERE PRACTICE\js\jquery-3.5.1.min.js"></script>
-<script src="C:\Users\Chandu\Desktop\COUSERE PRACTICE\js\bootstrap.min.js"></script>
-<script src="C:\Users\Chandu\Desktop\COUSERE PRACTICE\js\script.js"></script>
+<script src="C:\Users\Chandu\git\module3solution\js\jquery-3.5.1.min.js"></script>
+<script src="C:\Users\Chandu\git\module3solution\js\bootstrap.min.js"></script>
+<script src="C:\Users\Chandu\git\module3solution\js\script.js"></script>
 
 </body>
-</html>
+</html>C:\Users\Chandu\git\module3solution\js
