--- a/index.html
+++ b/index.html
@@ -72,4 +72,4 @@
 <script src="C:\Users\Chandu\git\module3solution\js\script.js"></script>
 
 </body>
-</html>C:\Users\Chandu\git\module3solution\js
+</html>
